test/expected/explain_2au-c.out
explain auto x, y
        ^
9: error: "auto" with multiple declarators is not supported in C
